# Borb

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  schemas.py
app/agent/: __init__.py  core.py  diary.py  planner.py  prompts.py  scheduler.py  system_prompt.md
app/audit/: __init__.py  logger.py
app/llm/: __init__.py  base.py  ollama.py  openai_compatible.py  router.py
app/system/: __init__.py  executor.py  filesystem.py  policy.py
app/system/websearch/: __init__.py  base.py  duckduckgo.py  router.py
tests/: test_agent_core.py  test_diary.py  test_executor.py  test_planner.py  test_policy.py  test_scheduler.py
